@@ -1,3 +1,13 @@
+# The testing matrix considers ruby/puppet versions supported by SIMP and PE:
+#
+# https://puppet.com/docs/pe/2017.3/overview/component_versions_in_recent_pe_releases.html
+# https://puppet.com/misc/puppet-enterprise-lifecycle
+# https://puppet.com/docs/pe/2017.3/overview/getting_support_for_pe.html#standard-releases-and-long-term-support-releases
+# ------------------------------------------------------------------------------
+#  release    pup   ruby      eol
+# PE 2017.2   4.10  2.1.9  2018-02-21
+# PE 2017.3   5.3   2.4.1  2018-07
+# PE 2018.1   ???   ?????  ????-??  (LTS)
 ---
 .cache_bundler: &cache_bundler
   cache:
@@ -32,46 +42,94 @@
     - bundle exec rake clean
     - bundle exec puppet module build
 
+.spec_tests: &spec_tests
+  script:
+    - bundle exec rake spec
+
 stages:
+  - validation
   - unit
   - acceptance
-  - deploy
 
-# Puppet 4
-puppet-gemfile:
-  stage: unit
-  tags:
-    - docker
-  image: ruby:2.1.9
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *validation_checks
-
-# For PE LTS Support
+# Puppet 4.10 for PE 2017.2 support (EOL:2018-02-21)
 # See: https://puppet.com/misc/puppet-enterprise-lifecycle
-puppet-4.7:
-  stage: unit
+# --------------------------------------
+pup4_10-validation:
+  stage: validation
   tags:
     - docker
-  image: ruby:2.1.9
+  image: ruby:2.1
   variables:
-    PUPPET_VERSION: '4.7'
+    PUPPET_VERSION: '~> 4.10.0'
   <<: *cache_bundler
   <<: *setup_bundler_env
   <<: *validation_checks
 
-puppet-5:
+pup4_10-unit:
+  stage: unit
+  tags:
+    - docker
+  image: ruby:2.1
+  variables:
+    PUPPET_VERSION: '~> 4.10.0'
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  <<: *spec_tests
+
+
+# Puppet 5.3 for PE 2017.3 support (EOL: 2018-07)
+# See: https://puppet.com/misc/puppet-enterprise-lifecycle
+# --------------------------------------
+pup5_3-validation:
+  stage: validation
+  tags:
+    - docker
+  image: ruby:2.4
+  variables:
+    PUPPET_VERSION: '~> 5.3.0'
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  <<: *validation_checks
+
+pup5_3-unit:
   stage: unit
   tags:
     - docker
   image: ruby:2.4
   variables:
-    PUPPET_VERSION: '5.0'
+    PUPPET_VERSION: '~> 5.3.0'
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  <<: *spec_tests
+
+
+# Keep an eye on the latest puppet 5
+# ----------------------------------
+pup5_latest-validation:
+  stage: validation
+  tags:
+    - docker
+  image: ruby:2.4
+  variables:
+    PUPPET_VERSION: '~> 5.0'
   <<: *cache_bundler
   <<: *setup_bundler_env
   <<: *validation_checks
 
+pup5_latest-unit:
+  stage: unit
+  tags:
+    - docker
+  image: ruby:2.4
+  variables:
+    PUPPET_VERSION: '~> 5.0'
+  <<: *cache_bundler
+  <<: *setup_bundler_env
+  <<: *spec_tests
 
+
+# Acceptance tests
+# ========================
 default:
   stage: acceptance
   tags:
@@ -102,7 +160,7 @@ default-fips:
   <<: *setup_bundler_env
   variables:
     BEAKER_fips: 'yes'
-    PUPPET_VERSION: '4.10'
+    PUPPET_VERSION: '~> 4.10.0'
   script:
     - bundle exec rake beaker:suites[default]
 
@@ -113,7 +171,7 @@ ce-fips:
   <<: *cache_bundler
   <<: *setup_bundler_env
   variables:
-    PUPPET_VERSION: '4.10'
+    PUPPET_VERSION: '~> 4.10.0'
     BEAKER_fips: 'yes'
   script:
     - bundle exec rake beaker:suites[ce]
@@ -125,7 +183,7 @@ default-latest:
   <<: *cache_bundler
   <<: *setup_bundler_env
   variables:
-    PUPPET_VERSION: '5.0.0'
+    PUPPET_VERSION: '~> 5.4'
   script:
     - bundle exec rake beaker:suites[default]
   allow_failure: true
