@@ -1,3 +1,6 @@
+* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.0-0
+- Update Hiera 4 to Hiera 5.
+
 * Wed May 09 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.1.1
 - Update to puppetlabs/docker 1.1.0
   - $selinux_enabled changed from taking string to only taking booleans, 
